cmake_minimum_required(VERSION 3.19)
project(HelloCpplab1)

set(CMAKE_CXX_STANDARD 11)

    # exe 1 #
#add_executable(cpplab2 exe1p1 exe1p1/ex1_q1.cpp exe1p1/Rational.h exe1p1/Rational.cpp) //q1
#add_executable(cpplab2 exe1p2 exe1p2/exe1p2.cpp exe1p2/Worker.cpp exe1p2/Worker.h)
#add_executable(cpplab2 exe1p3 exe1p3/exe1p3.cpp exe1p3/circle.cpp exe1p3/circle.h exe1p3/Point.cpp exe1p3/Point.h p1/Point.cpp p1/Point.h)

    # exe 2 #
#add_executable(cpplab2 exe2/p1/Point.cpp exe2/p1/Point.h exe2/p1/exe2p1.cpp exe2/p1/Polygon.cpp exe2/p1/Polygon.h)
#add_executable(cpplab2 exe2/p2/Vector.cpp exe2/p2/Vector.h exe2/p2/exe2p2.cpp)

    # exe 3 #
#add_executable(cpplab2 exe3/p1/exe3p1.cpp exe3/p1/Rational.cpp exe3/p1/Rational.h)
#add_executable(cpplab2 exe3/p2/exe3p2.cpp exe3/p2/MyDate.cpp exe3/p2/MyDate.h)
add_executable(cpplab2 exe3/p3/exe3p3.cpp exe3/p3/MyString.cpp exe3/p3/MyString.h )
