cmake_minimum_required(VERSION 3.19)
project(HelloCpplab1)

set(CMAKE_CXX_STANDARD 11)

# exe 1 #
#add_executable(cpplab2 exe1p1 exe1p1/ex1_q1.cpp exe1p1/Rational.h exe1p1/Rational.cpp) //q1
#add_executable(cpplab2 exe1p2 exe1p2/exe1p2.cpp exe1p2/Worker.cpp exe1p2/Worker.h)
#add_executable(cpplab2 exe1p3 exe1p3/exe1p3.cpp exe1p3/circle.cpp exe1p3/circle.h exe1p3/Point.cpp exe1p3/Point.h p1/Point.cpp p1/Point.h)

# exe 2 #
#add_executable(cpplab2 exe2/p1/Point.cpp exe2/p1/Point.h exe2/p1/exe2p1.cpp exe2/p1/Polygon.cpp exe2/p1/Polygon.h)
#add_executable(cpplab2 exe2/p2/Vector.cpp exe2/p2/Vector.h exe2/p2/exe2p2.cpp)

# exe 3 #
#add_executable(cpplab2 exe3/p1/exe3p1.cpp exe3/p1/Rational.cpp exe3/p1/Rational.h)
#add_executable(cpplab2 exe3/p2/exe3p2.cpp exe3/p2/MyDate.cpp exe3/p2/MyDate.h)
#add_executable(cpplab2 exe3/p3/exe3p3.cpp exe3/p3/MyString.cpp exe3/p3/MyString.h )

# exe 4 #
#add_executable(cpplab2 exe4/Clock.cpp exe4/Clock.h exe4/exe4.cpp exe4/Account.cpp exe4/Account.h exe5/p1/List.cpp exe5/p1/List.h)

# exe 5 #

#add_executable(cpplab2 exe5/p1/List.cpp exe5/p1/List.h exe5/p1/exe5p1.cpp)
#add_executable(cpplab2 exe5/p2/List.cpp exe5/p2/List.h exe5/p2/exe5p2.cpp)

# exe 6 #
#add_executable(cpplab2 exe6/p1/exe6p1.cpp exe6/p1/Employee.cpp exe6/p1/FullTime.cpp exe6/p1/PartTime.cpp)
#add_executable(cpplab2 exe6/p2/exe6p2.cpp exe6/p2/List.h exe6/p2/List.cpp exe6/p2/RoundList.cpp)

# exe 7 #
add_executable(cpplab2 exe7/p1/Shape.cpp exe7/p1/Circle.cpp exe7/p1/Rectangle.cpp exe7/p1/exe7.cpp exe7/p1/Triangle.cpp)